# url_shortener

./: .dist.env.dev  .dist.env.prod  .dist.env.test.local  .dist.env.test.prod  .gitignore  Dockerfile  Makefile  README.md  docker-compose-dev.yaml  docker-compose-local-test.yaml  docker-compose-prod-test.yaml  docker-compose-test.yaml  docker-compose.yaml  pyproject.toml
assets/: README_RUS.md
conf/: alembic.ini  nginx.conf  nginx_local.conf
scripts/: start.sh
src/app/auth/: hasher.py  id_provider.py  jwt_processor.py
src/app/di/: main.py
src/app/di/providers/: adapters.py  funcs.py  services.py
src/app/main/: config.py  web_api.py
src/app/repositories/: url_repo.py  user_repo.py
src/app/repositories/abstract/: __init__.py  abstracts.py
src/app/repositories/migrations/: env.py
src/app/repositories/migrations/versions/: 16b8e0c847c2_add_unique_username.py  c927eb43ae0e_initial_migration.py  f0db375d58b1_add_unique_constraint_to_url_short_url.py
src/app/repositories/models/: __init__.py  base.py  url.py  user.py
src/app/routes/: auth.py  health_check.py  index.py  root.py  url.py
src/app/routes/dependsecies/: authentication.py
src/app/routes/exc_handlers/: exc_handlers.py
src/app/routes/schemas/: limit_offset_url.py  oauth2_password_form.py  urls.py  user.py
src/app/services/: auth_service.py  get_short_url.py  url_service.py
src/app/services/abstraction/: uow.py
src/app/services/common/: exception.py
src/app/services/dto/: dto.py
src/app/static/: form.css  script.js  styles.css  url.css
src/app/static/scripts/: auth.js  copy_to_clipboard.js  deletelink.js  generate.js  postAddLink.js
src/app/templates/: base.html  index.html
src/app/templates/auth/: login.html  register.html
src/app/templates/urls/: index.html
src/app/templates/urls/components/: add_url.html  short_url.html  url-list.html  url.html
src/app/utils/: datetime_provide.py  get_short_url.py
static/: script.js  url.css
static/scripts/: generate.js  postAddLink.js
tests/: conftest.py  database_command.py  mocks.py  setttings.py
tests/e2e/: conftest.py  test_auth.py  test_get_url_from_short_url.py  test_health_check.py  test_index.py  test_url_auth.py  test_url_un_auth.py
tests/intergrations/: test_auth_service.py  test_get_short_url.py  test_url_repo.py  test_url_service.py  test_user_repo.py
tests/intergrations/data/: data_for_url_repo.py  data_for_user_repo.py
tests/mocks/: mock_uow.py  mock_url_repo.py  mock_user_repo.py
tests/unittest/: conftest.py  test_date_time_provider.py  test_jwt_id_provider.py  test_jwt_processor.py  test_password_hash.py  test_short_url_helpers.py  test_validate_url.py
