[tool.poetry]
name = "url_shortener"
version = "0.1.0"
description = ""
authors = ["Konovalov Dmitriy <dkonowalow@gmail.com>"]
readme = "README.md"
packages = [
  { include = "*", from = "src" },
  ]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["all"], version = "^0.111.0" }
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg = { extras = ["binary"], version = "^3.1.19" }
dishka = "^1.2.0"
bcrypt = "^4.2.0"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.7"
pytest = "^8.2.1"
ruff = "^0.4.4"

[tool.poetry.scripts]
start = "uvicorn --factory src.app.main.web_api:create_app --reload --host 0.0.0.0 --port 8008"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.init_options]
filterwarnings = ["ignore::DeprecationWarning"]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]
include = ["src/**.py", "tests/**.py"]
exclude = ["migrations**"]


[tool.ruff.lint]
ignore = [
  "ARG",
  "ANN",
  "D",
  "EM101",
  "EM102",
  "PT001",
  "PT023",
  "SIM108",
  "SIM114",
  "TRY003",
  "PLW2901",
  "RET505",
  "PLR0913",
  "UP038",
  "TCH001",
  "SLF001",
  "COM812",
  "ISC001",
  "S101",
]
select = ["ALL"]

[tool.ruff.lint.isort]
no-lines-before = ["local-folder"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"
